Tue Aug 21 15:24:47 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/ace_guidelines.vsmacros:
          Whitespaces in .mk and .mpd files are not modified.

Tue Aug 21 07:07:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_irix6.x_common.GNU:
        * include/makeinclude/platform_irix6.x_g++.GNU:
        * include/makeinclude/platform_irix6.x_sgic++.GNU:
          Moved some parts to the common file

        * include/makeinclude/platform_mvs.GNU:
          Use ?=

        * include/makeinclude/platform_sco-nothread.GNU:
        * include/makeinclude/platform_sco5.0.0-CC-fsu-pthread.GNU:
        * include/makeinclude/platform_sco5.0.0-fsu-pthread.GNU:
        * include/makeinclude/platform_sco5.0.0-mit-pthread.GNU:
        * include/makeinclude/platform_sco5.0.0-nothread.GNU:
          Removed, ancient and not maintained for years

Tue Aug 21 05:03:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_unixware_udk.GNU:
          Deleted, mentions it is for gcc 2.7.2, that compiler isn't
          supported anymore for a long time

Mon Aug 20 21:37:13 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/MT_Reference_Counted_Event_Handler_Test.cpp:
          Add thread ID and some additional debug output to help chase
          test hangs.

Mon Aug 20 20:02:32 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * protocols/tests/HTBP/Reactor_Tests/server.cpp:
        * protocols/tests/HTBP/Send_Large_Msg/server.cpp:
        * protocols/tests/HTBP/Send_Recv_Tests/server.cpp:
        * protocols/tests/HTBP/ping/server.cpp:
          eliminate anachronistic code warnings.

Mon Aug 20 14:16:20 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/C++NPv2/Select_Reactor_Logging_Server.cpp:
        * examples/C++NPv2/Server_Shutdown.cpp:
        * examples/C++NPv2/TP_Reactor_Logging_Server.cpp: